Fixed issue with icons alignment in smaller devices

--- a/css/style.css
+++ b/css/style.css
@@ -105,11 +105,6 @@ header {
   color: #fff;
 }
 
-#about-me, #projects {
-
-
-}
-
 .profile-pic {
 	border-radius: 100%;
 	max-width: 230px;
